<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2979FF"
    tools:context="com.example.mysc.tiper.CreateManualShift">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/exit_time"
                            android:textColor="#fff"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TimePicker
                            android:id="@+id/endPicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:timePickerMode="spinner" />
                    </LinearLayout>
                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="#ccffffff"
                        android:layout_width="2dp"
                        android:layout_height="match_parent" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/enter_time"
                            android:textColor="#fff"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TimePicker
                            android:id="@+id/startPicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:timePickerMode="spinner" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/date"
                        android:textColor="#fff"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <DatePicker
                        android:layout_gravity="center"
                        android:datePickerMode="spinner"
                        android:id="@+id/datePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tips"
                        android:textColor="#fff"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <EditText
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:background="@drawable/login_edit_text_style"
                        android:id="@+id/txtManualTips"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#FFC107"
            android:text="@string/ok"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="#000" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#FFC107"
            android:text="@string/cancel"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
